[package]
name = "broker-proto"
version = "0.1.0"
authors = ["Tomislav Tomašić <tomislav.tomasichr@gmail.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.9.0"
rmp-serde = "0.14.3"
serde = "1.0.110"
serde_derive = "1.0.110"